force-app/main/default/objects/Account/fields/Client_Folder__c.field-meta.xml
<CustomField>
    <fullName>Client_Folder__c</fullName>
    <inlineHelpText>This takes you to the SharePoint Folder</inlineHelpText>
    <label>Client Folder</label>
    <type>Url</type>
</CustomField>