force-app/main/default/objects/Account/fields/No_Of_Closed_Sessions__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Closed_Sessions__c</fullName>
    <label>No Of Closed Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>