force-app/main/default/objects/Account/fields/Total_Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Session_Duration__c</fullName>
    <label>Total Session Duration</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>