force-app/main/default/objects/Account/listViews/Previous_L4L_Clients.listView-meta.xml
<ListView>
    <fullName>Previous_L4L_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Current_Age__pc</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Current__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Previous ABACUS Clients</label>
</ListView>